[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://Platform.tres" type="TileSet" id=2]
[ext_resource path="res://World/TileMap.gd" type="Script" id=3]
[ext_resource path="res://World/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Player.gd" type="Script" id=5]
[ext_resource path="res://World/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Background/Background.png" type="Texture" id=7]
[ext_resource path="res://World/Pause.gd" type="Script" id=8]
[ext_resource path="res://fonts/LCD_Solid.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://fonts/pixel_font.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 9 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_v_enabled = true
drag_margin_bottom = 1.0
editor_draw_drag_margin = true
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Player/Camera2D"]
margin_left = 1.0
margin_top = 1.0
margin_right = 565.0
margin_bottom = 809.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player/Camera2D/TextureRect"]
margin_left = -1.0
margin_top = -1.0
margin_right = 119.0
margin_bottom = 59.0
align = 1
valign = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 2048 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 7 )
centered = false
region_rect = Rect2( 560, 800, 560, 800 )

[node name="Pause_canvas" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause" type="Control" parent="Pause_canvas"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Fade" type="ColorRect" parent="Pause_canvas/Pause"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Pause_box" type="VBoxContainer" parent="Pause_canvas/Pause"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_bottom = 35.0

[node name="Pause_button" type="Button" parent="Pause_canvas/Pause/Pause_box"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 35 )
flat = true

[node name="Pause_label" type="Label" parent="Pause_canvas/Pause/Pause_box/Pause_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1

[node name="Menu_box" type="VBoxContainer" parent="Pause_canvas/Pause"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -300.0
margin_right = 193.0
margin_bottom = 300.0
alignment = 1

[node name="Score" type="Label" parent="Pause_canvas/Pause/Menu_box"]
margin_top = 79.0
margin_right = 386.0
margin_bottom = 279.0
rect_min_size = Vector2( 386, 200 )
custom_fonts/font = ExtResource( 10 )
align = 1
autowrap = true

[node name="Replay" type="Button" parent="Pause_canvas/Pause/Menu_box"]
margin_top = 283.0
margin_right = 386.0
margin_bottom = 363.0
rect_min_size = Vector2( 386, 80 )
flat = true

[node name="Label" type="Label" parent="Pause_canvas/Pause/Menu_box/Replay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "Replay"
align = 1

[node name="Scoreboard" type="Button" parent="Pause_canvas/Pause/Menu_box"]
margin_top = 367.0
margin_right = 386.0
margin_bottom = 447.0
rect_min_size = Vector2( 386, 80 )
flat = true

[node name="Label" type="Label" parent="Pause_canvas/Pause/Menu_box/Scoreboard"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "Scoreboard"
align = 1

[node name="Exit" type="Button" parent="Pause_canvas/Pause/Menu_box"]
margin_top = 451.0
margin_right = 386.0
margin_bottom = 521.0
rect_min_size = Vector2( 386, 70 )
flat = true

[node name="Label" type="Label" parent="Pause_canvas/Pause/Menu_box/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 386, 60 )
custom_fonts/font = ExtResource( 10 )
text = "Exit"
align = 1

[node name="Score" type="Label" parent="Pause_canvas/Pause"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
[connection signal="pressed" from="Pause_canvas/Pause/Pause_box/Pause_button" to="Pause_canvas/Pause" method="_Button_pressed"]
[connection signal="pressed" from="Pause_canvas/Pause/Menu_box/Replay" to="Pause_canvas/Pause" method="_on_Replay_pressed"]
[connection signal="pressed" from="Pause_canvas/Pause/Menu_box/Scoreboard" to="Pause_canvas/Pause" method="_on_Scoreboard_pressed"]
[connection signal="pressed" from="Pause_canvas/Pause/Menu_box/Exit" to="Pause_canvas/Pause" method="_on_Exit_pressed"]
